updated package requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
+--find-links=https://girder.github.io/large_image_wheels GDAL
+geemap
+geopandas
+jupyter-server-proxy
+keplergl
+leafmap
+localtileserver
+nbserverproxy
+streamlit
+streamlit-option-menu
 langchain==0.0.126
 requests
 boto3
